cli/tests/import_data_url_error_stack.ts.out
error: Uncaught Error: Hello 2
    throw new Error(`Hello ${A.C}`);
         ^
    at a (72554b3efdc211ba4aa0b62629589f048e7d4afe7b0576f35ff340ce0ea8f9b8.ts:8:10)
    at import_data_url_error_stack.ts:3:1
